--- a/index.html
+++ b/index.html
@@ -199,14 +199,14 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
                 <div class="text-center">
                     <div class="aspect-[4/5] overflow-hidden mb-6 rounded-sm">
-                        <img src="https://images.unsplash.com/photo-1567013127542-490d757e51fe?q=80&w=800" class="w-full h-full object-cover hover:scale-105 transition-transform">
+                        <img src="https://images.pexels.com/photos/1552106/pexels-photo-1552106.jpeg" class="w-full h-full object-cover hover:scale-105 transition-transform">
                     </div>
                     <h4 class="font-heading text-xl">Marcus Vane</h4>
                     <p class="text-neon text-sm font-bold uppercase tracking-widest mt-1">Powerlifting Specialist</p>
                 </div>
                 <div class="text-center">
                     <div class="aspect-[4/5] overflow-hidden mb-6 rounded-sm">
-                        <img src="https://images.unsplash.com/photo-1548690312-e3b507d17a4d?q=80&w=800" class="w-full h-full object-cover hover:scale-105 transition-transform">
+                        <img src="https://images.pexels.com/photos/5878668/pexels-photo-5878668.jpeg" class="w-full h-full object-cover hover:scale-105 transition-transform">
                     </div>
                     <h4 class="font-heading text-xl">Elena Rodriguez</h4>
                     <p class="text-neon text-sm font-bold uppercase tracking-widest mt-1">CrossFit Head Coach</p>
